JDBC-5066 Java 17 upgrade (stream toList simplification)