@@ -11,7 +11,6 @@ import org.jdom.Element;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.dbn.common.options.setting.Settings.booleanAttribute;
 import static com.dbn.common.options.setting.Settings.childrenOf;
@@ -37,7 +36,7 @@ public class FileSystemSourceConfig implements PersistentStateElement {
                 .stream()
                 .map(p -> fileManager.findFileByNioPath(Path.of(p)))
                 .filter(f -> f != null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
